Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.11
-
None
-
BlueZ
-
-
35a97ca4b43b4dc481b907d37204613460b07bbd (qt/qtconnectivity/dev)
Description
As posted in this support forum post, there seems to be a bug in the BlueZ implementation of QLowEnergyController.
Advertising data cannot be changed, because once the QLeAdvertiserBluez object is constructed (at first "startAdvertising()" call), advertisement data is never updated again.
Also resetting the controller doesn't reset advertising data. This is a bug in my opinion, because
- It should be possible to update BLE advertising
- The other platform implementations (Android, OSX) seem to support it
Attachments
For Gerrit Dashboard: QTBUG-70754 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
241999,2 | Permit adjusting of advertisement data | 5.12 | qt/qtconnectivity | Status: MERGED | +2 | 0 |